Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-3879

Undefined evaluation order causes incorrect processing in the C++ library JSON protocol

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.10.0
    • C++ - Library
    • None

    Description

      Concerns JSON protocol only: The evaluation order of the following equation is undefined:

      lib/cpp/src/thrift/protocol/TJSONProtocol.cpp:
      return writeJSONObjectEnd() + writeJSONArrayEnd();

      I will supply a fix and a merge request...

      Attachments

        Issue Links

          Activity

            People

              dtmuller Daniel Mueller
              dtmuller Daniel Mueller
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 1h
                  1h
                  Remaining:
                  Remaining Estimate - 1h
                  1h
                  Logged:
                  Time Spent - Not Specified
                  Not Specified