THRIFT-3879 Undefined evaluation order causes incorrect processing in the C++ library JSON protocol Client: C++ Patch: Daniel Mueller <dtmuller@web.de>

This closes #1050